--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section id="contact">
       <h3>Contact Me</h3>
-      <p>You can also reach me at <a href="mailto:jayrawal78@gmail.com">@jitendravjh@gmail.com</a>.</p>
+      <p>You can also reach me at <a href="mailto:jayrawal78@gmail.com">@jayrawal78@gmail.com</a>.</p>
     </section>
   </main>
   <footer>
